[gd_scene load_steps=2 format=3 uid="uid://dsid8jbs1ic4n"]

[ext_resource type="Script" path="res://partial/modal.gd" id="1_vjspo"]

[node name="Modal" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -44.0
offset_right = -118.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_vjspo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 233.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
color = Color(0, 0.665013, 0.666204, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 233.0
offset_bottom = 88.0

[node name="Message" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Would you like to spend 1key to open this house?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Option1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Yes"

[node name="Option2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "No"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Option2" to="." method="_on_option_2_pressed"]
